tests/markups/fail-6.expected
ERROR: Unknown tag 'tag' on line 1 char 37