tests/markups/fail-6.markup
<span size="1024">this <tag>is bad</tag></span>
